--- a/_posts/2016-08-12-health.md
+++ b/_posts/2016-08-12-health.md
@@ -1,6 +1,7 @@
 ---
 title: Health effects of friendship
-date: 2016-08-12
+start_date: 2024-05-01
+end_date: Current
 description: How does friendship play a role in your health?
 categories:
   - friendship
