--- a/_posts/2016-08-12-health.md
+++ b/_posts/2016-08-12-health.md
@@ -1,18 +1,18 @@
 ---
-title: Health effects of friendship
+title: Seamgen
 start_date: 2024-05-01
 end_date: Current
-description: How does friendship play a role in your health?
+description: Seamgen is a digital transformation company located in San Diego that specializes in full-stack custom application development services for web and mobile across all cloud platforms. Here, I interned as a Software Developer to submit a deliverable for the state of Florida's Statewide Vulnerability Assessment and worked alongside the marketing team to improve Search Engine Optimization (SEO) for the Seamgen website.
 categories:
-  - friendship
-  - health
-image: https://source.unsplash.com/collection/375719/2000x1322?a=.png
-author_staff_member: tom
+  - software-Engineering
+  - search engine optimization
+image:
+author_staff_member: Melvyn Tan
 ---
 
 Conventional wisdom suggests that good friendships enhance an individual's sense of happiness and overall well-being. Indeed, a number of studies have found that strong social supports improve a woman's prospects for good health and longevity. Conversely, loneliness and a lack of social supports have been linked to an increased risk of heart disease, viral infections, and cancer, as well as higher mortality rates overall. Two researchers have even termed friendship networks a "behavioral vaccine" that boosts both physical and mental health.
 
-![Man](https://source.unsplash.com/random/1500x1000)
+![Seamgen](../images/seamgen-white.svg)
 
 While there is an impressive body of research linking friendship and health, the precise reasons for the connection remain unclear. Most of the studies in this area are large prospective studies that follow people over a period of time, and while there may be a correlation between the two variables (friendship and health status), researchers still do not know if there is a cause and effect relationship, such as the notion that good friendships actually improve health.
 
